# setuptools-twine

./: .gitignore  .travis.yml  Makefile  README.rst  requirements.in  requirements37.txt  setup.cfg  tox.ini
setuptools_twine/: __init__.py  commands.py
test_project/: README  setup.cfg
