[bumpversion]
commit = True
current_version = 0.0.0
tag = True
tag_name = {new_version}

[bumpversion:file:setuptools_twine/__init__.py]

[metadata]
name = setuptools-twine
version = attr: setuptools_twine.__version__
author = Nine More Minutes, Inc.
author_email = chris@ninemoreminutes.com
description = Utility to update ATEM Mini Pro Streaming.xml file with new streaming providers.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = setuptools, twine
license = BSD
url = https://github.com/cchurch/setuptools-twine
project_urls = 
    Documentation = https://github.com/cchurch/setuptools-twine/blob/master/README.rst
    Source = https://github.com/cchurch/setuptools-twine
    Tracker = https://github.com/cchurch/setuptools-twine/issues
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Setuptools Plugin
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Build Tools

[options]
packages = setuptools_twine
zip_safe = False
install_requires =
    setuptools
    twine

[options.entry_points]
distutils.commands = 
    twine_check = setuptools_twine:TwineCheckCommand
    twine_upload = setuptools_twine:TwineUploadCommand

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[bdist_wheel]
universal = 1

[aliases]
dev_build = clean egg_info sdist bdist_wheel twine_check
release_build = clean egg_info -b "" sdist bdist_wheel twine_check
pypi_upload = release_build twine_upload

[pycodestyle]
ignore = E501
exclude = .git,build,dist

[flake8]
ignore = E501
exclude = .git,build,dist
