[metadata]
name = setuptools-twine-test
version = attr: setuptools_twine_test.__version__
author = Nine More Minutes, Inc.
author_email = chris@ninemoreminutes.com
description = Test project to exercise setuptools-twine via setup_requires
long_description = file: README
long_description_content_type = text/plain
keywords = setuptools, twine
license = BSD
url = https://github.com/cchurch/setuptools-twine
project_urls = 
	Documentation = https://github.com/cchurch/setuptools-twine/blob/master/README.rst
	Source = https://github.com/cchurch/setuptools-twine
	Tracker = https://github.com/cchurch/setuptools-twine/issues
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Framework :: Setuptools Plugin
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Build Tools

[options]
py_modules = setuptools_twine_test
zip_safe = False
setup_requires = 
	setuptools-twine

[check]
metadata = True
strict = True

[clean]
all = True

[bdist_wheel]
universal = 1
